--- a/table.html
+++ b/table.html
@@ -1,5 +1,6 @@
 <table>
     <tr>
+        <th>ADMISSION TABLE OF DIPLOMA STUDENTS</Table></th>
         <td>Name of a Student</td>
         <td>Admission number</td>
         <td>Department</td>
