commiting background image

--- a/changecolor.html
+++ b/changecolor.html
@@ -2,9 +2,13 @@
     <html>
     <head>
     <style>
-    
+     body {
+         background-image: url("gradient-bg.png");
+         background-repeat: repeat-x;
+        }   
+            
         p {
-            background-color: blue;
+            color: blue;
             text-align: center;
         }
         </style>
