changing link color

--- a/links.html
+++ b/links.html
@@ -1,4 +1,15 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <style>a 
+            {
+        color:green;
+            }
+
+    </style>
+
 <p> Movie review:
+    
     <ul>
         <li> <a href-"http: // www.example.com">Empire</a> </li>
     </li>
