elements of a table

--- a/tableelement.html
+++ b/tableelement.html
@@ -5,6 +5,13 @@
 table, th, td {
    border: 2px solid green;
 }
+th{
+    background-color: blueviolet;
+    padding: 15PX;
+}
+td{
+    width: 100%;
+}
 </style>
 </head>
 <body>
